<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/locationConfirmation2"
        android:icon="@drawable/ic_weekend_black_24dp"
        android:title="@string/donate" />
    <item
        android:id="@+id/findStuff"
        android:icon="@drawable/ic_desktop_windows_black_24dp"
        android:title="@string/find" />
    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/about2"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/about"
        android:visible="true" />
    <item
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        android:id="@+id/settings"/>
</menu>