<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <LinearLayout
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemsReused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="109"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7sp"
                android:text="Items reused by Resusers"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/treesPlanted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="109"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7sp"
                android:text="Trees planted"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stats"
        android:orientation="horizontal"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="38dp"
            android:layout_height="58dp"
            android:src="@layout/tree_image"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="38dp"
            android:layout_height="58dp"
            android:src="@layout/tree_image"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="38dp"
            android:layout_height="58dp"
            android:src="@layout/tree_image"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="38dp"
            android:layout_height="58dp"
            android:src="@layout/tree_image"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="38dp"
            android:layout_height="58dp"
            android:src="@layout/tree_image"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="38dp"
            android:layout_height="58dp"
            android:src="@layout/tree_image"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="38dp"
            android:layout_height="58dp"
            android:src="@layout/tree_image"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="38dp"
            android:layout_height="58dp"
            android:src="@layout/tree_image"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="38dp"
            android:layout_height="58dp"
            android:src="@layout/tree_image"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="38dp"
            android:layout_height="58dp"
            android:src="@layout/tree_image"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@layout/border_layout"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/frame">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="@string/about_the_resuser" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/aboutUs" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/border_layout"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/l1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/monash_council" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/monashFact" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>